k8s/symfony.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: symfony-mailer
  namespace: fullstack-n4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: symfony-mailer
  template:
    metadata:
      labels:
        app: symfony-mailer
    spec:
      containers:
        - name: symfony-mailer
          image: dylanpion/symfony-image
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: symfony-mailer-service
  namespace: fullstack-n4
spec:
  selector:
    app: symfony-mailer
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: NodePort
