k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstack-ingress
  namespace: fullstack-n4
spec:
  rules:
    - host: nextudrive.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 5173
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /api/mailer
            pathType: Prefix
            backend:
              service:
                name: symfony-mailer-service
                port:
                  number: 9090
